--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -151,23 +151,23 @@ body {
 }
 .msger-send-btn {
   margin-left: 10px;
-  background: rgb(0, 196, 65);
+  background: #579ffb;
   color: #fff;
   font-weight: bold;
   cursor: pointer;
   transition: background 0.23s;
 }
 .msger-send-btn:hover {
-  background: rgb(0, 180, 50);
+  background: #4883cd
 }
 button {
   font-size: 20px;
 }
 
 .title {
-  font-size: 24px;
-  font-weight: bold;
-  margin-top: 20px;
+  font-size: 20px;
+  margin-top: 0;
+  margin-bottom: 40px;
   text-align: center;
   color: gray;
 }
